kubernetes_nodejs/nodejs-tcp-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.service.type: LoadBalancer
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs-tcp
  name: nodejs-tcp
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: nodejs
  type: LoadBalancer
status:
  loadBalancer: {}
